# sandsim

./: Cargo.toml
shaders/: main_150.glslf  main_150.glslv
src/: cube.rs  lib.rs  main.rs
src/controller/: mod.rs
src/embedding/: mod.rs
src/model/: embedding.rs  lattice.rs  mod.rs  region.rs  sand_graph.rs  uniform_lattice.rs
src/model/lattice/: mod.rs  regular_lattice.rs  tilings.rs  uniform_lattice.rs  utils.rs
src/relaxator/: mod.rs
src/sand_graph/: mod.rs
src/view/: camera.rs  mod.rs
